# tssx

./: .gitignore  CMakeLists.txt  README.md
include/tssx/: bridge.h  client-overrides.h  common-overrides.h  common-poll-overrides.h  connection.h  epoll-overrides.h  poll-overrides.h  select-overrides.h  server-overrides.h  session-table.h  session.h  socket-overrides.h  vector.h
include/utility/: common.h  utility.h
other/: notes.md
scripts/: run-client.sh  run-server.sh  run-try-client.sh  run-try-server.sh
source/: CMakeLists.txt
source/experiment/: CMakeLists.txt  client.c  server.c
source/tssx/: CMakeLists.txt  bridge.c  buffer.c  client-overrides.c  common-overrides.c  common-poll-overrides.c  connection-options.c  connection.c  epoll-overrides.c  free-list.c  poll-overrides.c  select-overrides.c  selective.c  server-overrides.c  session-table.c  session.c  shared-memory.c  socket-overrides.c
source/utility/: CMakeLists.txt  arguments.c  benchmarks.c  parent.c  process.c  signals.c  sockets.c  utility.c
try/: CMakeLists.txt  client  server  server.c  try-client.c  try-common.c  try-common.h  try-epoll.c  try-epoll.h  try-poll.c  try-poll.h  try-select.c  try-select.h  try-server.c
